# MEPHI_Lab_C_plus_2

./: CMakeLists.txt  LineClass.cpp  LineClass.h  Tools.cpp  Tools.h  main.cpp  tests.cpp
